Update Connections words for today

--- a/index.html
+++ b/index.html
@@ -162,3 +162,5 @@
 <!-- Updated at runtime -->
 <!-- Updated at runtime -->
 <!-- Updated at runtime -->
+<!-- Updated at runtime -->
+<!-- Updated at runtime -->
